# rmux

./: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.omo/: boulder.json
.omo/drafts/: fix-keybindings.md
.omo/notepads/fix-keybindings/: worker-notes.md
.omo/plans/: fix-keybindings.md
benches/shell_eval/: .gitignore  README.md
benches/shell_eval/fixtures/tiny-crate/: Cargo.toml
benches/shell_eval/fixtures/tiny-crate/src/: main.rs
benches/shell_eval/results/: latest.md  latest.tsv
crates/rmux-api/: Cargo.toml
crates/rmux-api/src/: connection.rs  dispatch.rs  error.rs  lib.rs  methods.rs  protocol.rs  server.rs  tests.rs
crates/rmux-app/: Cargo.toml  build.rs
crates/rmux-app/src/: api.rs  api_dispatch.rs  app.rs  main.rs  shortcut_handler.rs  shortcut_manager.rs  shortcuts.rs  update.rs
crates/rmux-app/src/browser/: automation.rs  engine.rs  mod.rs  os_webview.rs  session.rs  webview.rs
crates/rmux-app/src/browser/chromium/: engine.rs  handlers.rs  mod.rs  runtime.rs
crates/rmux-app/src/notifications/: manager.rs  mod.rs
crates/rmux-app/src/ui/: help_menu.rs  icons.rs  mod.rs  notification_panel.rs  settings_panel.rs  shortcut_hints.rs  sidebar.rs  status_bar.rs  terminal_pane.rs  text_sink.rs  theme.rs  top_bar.rs  wallpaper.rs  workspace_view.rs
crates/rmux-app/src/workspace/: mod.rs  model.rs  model_tests.rs  session.rs  sidebar_snapshot.rs  splits.rs  surface.rs  title.rs
crates/rmux-cli/: Cargo.toml
crates/rmux-cli/src/: commands.rs  lib.rs  main.rs  output.rs  socket.rs  util.rs
crates/rmux-cli/src/commands/: aliases.rs  app_cmd.rs  browser.rs  call.rs  events.rs  mod.rs  notification.rs  sidebar.rs  surface.rs  system.rs  workspace.rs
crates/rmux-cli/src/hooks/: events.rs  install.rs  mod.rs  registry.rs
crates/rmux-cli/src/launchers/: claude_teams.rs  mod.rs
crates/rmux-cli/src/tmux_compat/: mod.rs  parse.rs  store.rs
crates/rmux-cli/tests/: cli_binary.rs  command_dispatch.rs  socket_roundtrip.rs
crates/rmux-cli/tests/common/: mod.rs
crates/rmux-config/: Cargo.toml
crates/rmux-config/src/: lib.rs  schema.rs
crates/rmux-terminal/: Cargo.toml
crates/rmux-terminal/src/: backend.rs  input.rs  lib.rs  osc.rs  renderer.rs  state.rs  theme.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  BROWSER_ENGINE.md  CHROMIUM_BROWSER_PLAN.md  CLI.md  CONVENTIONS.md  KEY_BINDINGS.md  PLAN.md  TESTING_STRATEGY.md  UI_REDESIGN.md  worktree-phase-0.md  worktree-phase-1.md  worktree-phase-2.md
docs/guide/: 00-intro.md  01-project-layout.md  02-rust-basics.md  03-terminal-backend.md  04-terminal-state.md  05-terminal-renderer.md  06-terminal-theme.md  07-osc-notifications.md  08-input-mapper.md  09-workspace-splits.md  10-workspace-model.md  11-app-state.md  12-ui-theme.md  13-ui-topbar-sidebar.md  14-terminal-pane-widget.md  15-shortcuts.md  16-notifications.md  17-api-server.md  18-config.md  19-data-flow.md  20-next-steps.md  agent-hooks.md  agent-integrations.md
docs/plans/: agent-integrations-tmux-compat.md  agent-integrations-tmux-compat.original.md
rmux-tauri-ui/: index.html  package-lock.json  package.json  tsconfig.json
rmux-tauri-ui/src/: App.css  App.tsx  main.tsx  types.ts
rmux-tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
rmux-tauri-ui/src-tauri/src/: main.rs  notifications.rs  pane.rs  pty.rs  workspace.rs
rmux-tauri-ui/src/components/: NotificationPanel.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPane.tsx  TopBar.tsx  WorkspaceView.tsx  index.ts
scripts/: bench-shells.sh  fetch-cef.ps1  fetch-cef.sh  install.sh
