[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# GUI framework
eframe = "0.31"
egui = "0.31"

# Terminal emulation
alacritty_terminal = "0.26"
portable-pty = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"
