[workspace]
members = ["crates/*"]
default-members = ["crates/rmux-app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# GUI framework
eframe = "0.31"
egui = "0.31"

# Terminal emulation
alacritty_terminal = "0.26"
portable-pty = "0.8"

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "net",
    "fs",
    "io-util",
    "time",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop notifications
notify-rust = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Browser / OS webview
wry = { version = "0.50", default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"
