[package]
name = "rmux-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rmux_api"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
