[package]
name = "rmux-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmux"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rmux-terminal = { path = "../rmux-terminal" }
