[package]
name = "rmux-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmux"
path = "src/main.rs"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
notify-rust = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rmux-terminal = { path = "../rmux-terminal" }
rmux-api = { path = "../rmux-api" }
wry = { workspace = true }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
