[package]
name = "rmux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rmux-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
