[package]
name = "rmux-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rmux_terminal"
path = "src/lib.rs"

[dependencies]
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
egui = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
